[project]
name = "neuro"
version = "0.1.0"
description = ""
authors = [
    {name = "Faragoz",email = "aragon.froylan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "pyside6 (>=6.8.2.1,<7.0.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
