[project]
name = "neuro"
version = "0.1.0"
description = ""
authors = [
    {name = "Faragoz",email = "aragon.froylan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "pyside6 (>=6.8.2.1,<7.0.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "msgpack (>=1.1.0,<2.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
